--- a/resources/knative-service.yaml
+++ b/resources/knative-service.yaml
@@ -7,6 +7,6 @@ spec:
     spec:
       containers:
         # Replace with your docker registry info
-        - image: registry.digitalocean.com/tekton-ci-cd/2048-game:latest
+        - image: registry.digitalocean.com/tekton-ci/2048-game:latest
           ports:
             - containerPort: 80
